layout fixed and more comments added

--- a/views/about.pug
+++ b/views/about.pug
@@ -11,16 +11,13 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
 
-        //- Replace with your name
         h1 #{name}
 
-        //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
 
 
         .about-bio
 
-          //- Replace the boilerplate below with your best elevator pitch
           p  I am a 30 year old software engineer from Vancouver, Canada. As a passionate enthusiast of art, music and coding, I enjoy finding solutions for creative passionate creators.
           p  I spent the last decade building and creating in the music industry being a co-founder of a record label and a music producer in a rap duo <a href="https://open.spotify.com/artist/0XQ7VqBPyDUAb0pcPLZZ0O">So Loki</a>. If I wasn't playing in festivals or throwing shows I was in front of laptop screens for hours creating and inventing. Alongside the creative came the marketing, branding, networking and collaboration navigating as my own business.
           p  Coding came into my life after getting interested in web3 ecosystem from minting and selling artwork through our <a href="https://foundation.app/@SOLOKI/foundation/27906">Foundation marketplace</a>. Learning smart contracts and new web3 tech is so fascinating which led me to enrolling in the <a href="https://teamtreehouse.com/techdegree/full-stack-javascript">Full Stack Javascript techdegree</a> at <b>Team Treehouse</b>.
@@ -50,3 +47,4 @@ block content
 
         a.btn-link(href='http://github.com/jajablinky') GitHub
         a.btn-link(href='http://twitter.com/jajablinky') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/geoff-millar-98805510a/') Linked-in
