error handling updated

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
 
     h1 Hi, welcome!
 
-    p I am a 30 year old software engineer from Vancouver, Canada. As a passionate enthusiast of art, music and coding, I enjoy finding solutions for creative passionate creators.
+    p I am a 30 year old Full Stack Javascript Developer from Vancouver, Canada. As a passionate enthusiast of art, music and coding, I enjoy finding solutions for creative passionate creators.
     .projects-box.box.grid
 
       each project in projects  
