--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html(lang="en" dir="ltr")
 
           h5 geoff millar
 
-          p i am a software engineer, and artist with a focus on helping creators build.
+          p i am a full stack javascript developer, and artist with a focus on helping creators build.
 
           a(href='/about') find out more &rarr;
 
